configs/ingress/ingress-definition.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: some-ingress-name
spec:
  backend:
    serviceName: some-service-name
    servicePort: 8080
